# Gocator

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
C++/: CMakeLists.txt  Gocator.cpp  Gocator.h
C++/Internal/: GocatorAcquisition.cpp
C++/Utility/GraphicsEngine/: GocatorDataSetScene3DAdapter.cpp
C++/Utility/Qt/: QGocatorWidget.cpp  QGocatorWidget.h
GoPxL-SDK/: README.md
GoPxL-SDK/include/GoApi/GoApi/: AuditLogging.h  Exception.h  GoApiDef.h  NlohmannDeclarations.h
GoPxL-SDK/include/GoApi/GoApi/Async/: AsyncRunner.h  AsyncTimer.h
GoPxL-SDK/include/GoApi/GoApi/GoDataTree/: GoDataTree.h
GoPxL-SDK/include/GoApi/GoApi/Params/: ExtendedValue.h  KeyboardShortcut.h  Params.h
GoPxL-SDK/include/GoApi/GoApi/Resource/: EventType.h  IResource.h  ReqRespInfo.h  ResourceBase.h
GoPxL-SDK/include/GoApi/GoApi/Translations/: GoGetText.h
GoPxL-SDK/include/GoApi/GoApi/Updating/: ScopedUpdater.h
GoPxL-SDK/include/GoApi/GoApi/UserData/: UdiCache.h
GoPxL-SDK/include/GoPxLSdk/GoPxLSdk/: ClassicDiscoveryProto.h  Def.h  GoChannelError.h  GoDataSet.h  GoDiscoveryClient.h  GoGdpClient.h  GoInstance.h  GoJson.h  GoJsonError.h  GoJsonIterator.h  GoJsonPointer.h  GoNotificationType.h  GoPxLDiscoveryProto.h  GoRequest.h  GoRequestError.h  GoRequestMethod.h  GoResource.h  GoResourceError.h  GoResourceManager.h  GoResponse.h  GoResponseType.h  GoRestClient.h  GoSchemaValidator.h  GoSystem.h  GoTransaction.h  GoUri.h  Version.h
GoPxL-SDK/include/GoPxLSdk/GoPxLSdk/GoGdpMsg/: GoGdpBoundingBox.h  GoGdpFeatureCircle.h  GoGdpFeatureLine.h  GoGdpFeaturePlane.h  GoGdpFeaturePoint.h  GoGdpImage.h  GoGdpMeasurement.h  GoGdpMesh.h  GoGdpMsg.h  GoGdpMsgDef.h  GoGdpNull.h  GoGdpPixelFormat.h  GoGdpProfileBase.h  GoGdpProfilePointCloud.h  GoGdpProfileUniform.h  GoGdpRendering.h  GoGdpSignal.h  GoGdpSpots.h  GoGdpStamp.h  GoGdpString.h  GoGdpSurfaceBase.h  GoGdpSurfacePointCloud.h  GoGdpSurfaceUniform.h  GoGdpTransform.h
GoPxL-SDK/include/GoPxLSdk/GoPxLSdk/Internal/: GoCtrlChannel.h
GoPxL-SDK/include/kApi/kApi/: kAlloc.h  kAlloc.x.h  kApi.h  kApiCfg.h  kApiDef.h  kApiDef.x.h  kApiLib.h  kApiLib.x.h  kApiVersion.h  kAssembly.h  kAssembly.x.h  kObject.h  kObject.x.h  kType.h  kType.x.h  kValue.h  kValue.x.h
GoPxL-SDK/include/kApi/kApi/Crypto/: kBlowfishCipher.h  kBlowfishCipher.x.h  kCipher.h  kCipher.x.h  kCipherStream.h  kCipherStream.x.h  kHash.h  kHash.x.h  kSha1Hash.h  kSha1Hash.x.h
GoPxL-SDK/include/kApi/kApi/Data/: kArray1.h  kArray1.x.h  kArray2.h  kArray2.x.h  kArray3.h  kArray3.x.h  kArrayList.h  kArrayList.x.h  kArrayProvider.h  kArrayProvider.x.h  kBitArray.h  kBitArray.x.h  kBox.h  kBox.x.h  kBytes.h  kBytes.x.h  kCollection.h  kCollection.x.h  kDataTree.h  kDataTree.x.h  kDataTreeItem.x.h  kImage.h  kImage.x.h  kList.h  kList.x.h  kMap.h  kMap.x.h  kMath.h  kMath.x.h  kPixelFormat.h  kPixelFormat.x.h  kQueue.h  kQueue.x.h  kString.h  kString.x.h  kXml.h  kXml.x.h
GoPxL-SDK/include/kApi/kApi/Io/: kDat5Serializer.h  kDat5Serializer.x.h  kDat6Serializer.h  kDat6Serializer.x.h  kDirectory.h  kDirectory.x.h  kFile.h  kFile.x.h  kHttpServer.h  kHttpServer.x.h  kHttpServerChannel.h  kHttpServerChannel.x.h  kHttpServerRequest.h  kHttpServerRequest.x.h  kHttpServerResponse.h  kHttpServerResponse.x.h  kMemory.h  kMemory.x.h  kNetwork.h  kNetwork.x.h  kPath.h  kPath.x.h  kPipeStream.h  kPipeStream.x.h  kSerializer.h  kSerializer.x.h  kSocket.h  kSocket.x.h  kStream.h  kStream.x.h  kStreamSizeCounter.h  kStreamSizeCounter.x.h  kTcpClient.h  kTcpClient.x.h  kTcpServer.h  kTcpServer.x.h  kUdpClient.h  kUdpClient.x.h  kWebSocket.h  kWebSocket.x.h
GoPxL-SDK/include/kApi/kApi/Threads/: kAtomic.h  kAtomic.x.h  kLock.h  kLock.x.h  kMsgQueue.h  kMsgQueue.x.h  kParallel.h  kParallel.x.h  kPeriodic.h  kPeriodic.x.h  kSemaphore.h  kSemaphore.x.h  kThread.h  kThread.x.h  kThreadPool.h  kThreadPool.x.h  kTimer.h  kTimer.x.h
GoPxL-SDK/include/kApi/kApi/Utils/: kBackTrace.h  kBackTrace.x.h  kDateTime.h  kDateTime.x.h  kEvent.h  (+24 more)
GoPxL-SDK/lib/apple_silicon/: libGoApi.dylib  libGoPxLSdk.dylib  libkApi.dylib
GoPxL-SDK/lib/win64/: GoApi.lib  GoPxLSdk.lib  kApi.lib
GoPxL-SDK/lib/win64d/: GoApi.lib  kApi.lib
GoPxL-SDK/samples/SimpleConnect/: Makefile
GoPxL-SDK/samples/SimpleConnect/src/: SimpleConnect.cpp
docs/: API_QT_SPLIT_CHECKLIST.md
src/: main.cpp
src/gocator/: Gocator.cpp  Gocator.h  GocatorAcquisition.cpp  GocatorAcquisition.h  GocatorSettingsManager.cpp  GocatorSettingsManager.h  QGocatorWidget.cpp  QGocatorWidget.h
src/ui/: main.cpp
(+16 files in other folders)
